force-app/main/default/objects/Employee__c/fields/Department_Email__c.field-meta.xml
<CustomField>
    <fullName>Department_Email__c</fullName>
    <formula>Department__r.Email_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department Email</label>
    <type>Text</type>
</CustomField>