force-app/main/default/objects/Employee__c/fields/Department_Name__c.field-meta.xml
<CustomField>
    <fullName>Department_Name__c</fullName>
    <description>Employees dept name</description>
    <formula>Department__r.Department_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department Name</label>
    <type>Text</type>
</CustomField>