force-app/main/default/objects/Employee__c/fields/Department_Phone__c.field-meta.xml
<CustomField>
    <fullName>Department_Phone__c</fullName>
    <formula>Department__r.Phone_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department Phone</label>
    <type>Text</type>
</CustomField>