force-app/main/default/objects/Employee__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <description>Employee&apos;s Name</description>
    <label>Employee Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>