force-app/main/default/objects/Employee__c/fields/Loan_Eligible_date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Eligible_date__c</fullName>
    <formula>DATE ( YEAR( Loan_Maturity_date__c ) + 1,  MONTH( Loan_Maturity_date__c ) ,  DAY( Loan_Maturity_date__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Eligible date</label>
    <type>Date</type>
</CustomField>