force-app/main/default/objects/Employee__c/fields/loan_issued_date__c.field-meta.xml
<CustomField>
    <fullName>loan_issued_date__c</fullName>
    <description>Employees loan issued date</description>
    <label>loan issued date</label>
    <type>Date</type>
</CustomField>