force-app/main/default/objects/Employee__c/fields/Loan_Maturity_date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Maturity_date__c</fullName>
    <formula>ADDMONTHS( loan_issued_date__c , Loan_maturity_in_months__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Maturity date</label>
    <type>Date</type>
</CustomField>