force-app/main/default/objects/Employee__c/fields/Loan_maturity_in_months__c.field-meta.xml
<CustomField>
    <fullName>Loan_maturity_in_months__c</fullName>
    <description>employees loan maturity in months</description>
    <label>Loan maturity in months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>