force-app/main/default/objects/Employee__c/fields/Reports_to__c.field-meta.xml
<CustomField>
    <fullName>Reports_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reporting Manager</description>
    <label>Reports to</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Team</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>