force-app/main/default/objects/Employee__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <description>Employee&apos;s Salary</description>
    <label>Salary</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>