force-app/main/default/objects/Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>Gender__c</columns>
    <columns>Age__c</columns>
    <columns>Salary__c</columns>
    <columns>Department__c</columns>
    <columns>Contact__c</columns>
    <columns>Department_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>